--- a/club-manager/src/app/activity/activity-list/activity-list.component.scss
+++ b/club-manager/src/app/activity/activity-list/activity-list.component.scss
@@ -14,7 +14,7 @@
 .table-row {
   min-height: 25px;
   max-height: 25px !important;
-  height: 25px;
+  height: 25px!important;
 }
 
 // Progressbar
