--- a/club-manager/src/app/members/member-select-list/member-select-list.component.html
+++ b/club-manager/src/app/members/member-select-list/member-select-list.component.html
@@ -21,7 +21,7 @@
     <mat-list-option checkboxPosition="before" *ngFor="let mem of memberList"
         [selected]=false
         [value]="mem">
-         {{mem.Firstname}} {{mem.Familyname}} ({{mem.Alias}})
+        {{mem.Familyname}} {{mem.Firstname}} ({{mem.Alias}})
       </mat-list-option>
   </mat-selection-list>
 </form>
