--- a/club-manager/src/app/activity/activity-header/activity-header.component.scss
+++ b/club-manager/src/app/activity/activity-header/activity-header.component.scss
@@ -18,23 +18,37 @@
   background-color: var(--primary);
 }
 
-.search {
-  margin-top: 8px;
-  margin-left: 100px;
-  font-size: 12pt;
-}
-
 .search-icon {
   margin-left: 50px;
-  font-size: 12pt;
+  font-size:12pt;
+  display: flex;
+  align-items: center;
 }
 
-.search-input1 {
+.search-input {
+  font-family:"Arial Narrow", Helvetica, sans-serif;
+  font-size: 0.9rem;
+  font-weight: 600;
+  margin-top: 0px;    //10
   margin-left: 5px;
-  font-size:8pt;
+  width: 210px;
+  height:60px;       //60
+  //background-color: rgb(0, 255, 13) !important;
 }
 
 .search-input2 {
-  margin-left: 15px;
-  font-size:8pt;
+  font-family:"Arial Narrow", Helvetica, sans-serif;
+  font-size: 0.9rem;
+  font-weight: 600;
+  margin-top: 0px;    //10
+  margin-left: 5px;
+  width: 210px;
+  height:60px;       //60
+  //background-color: rgb(0, 255, 13) !important;
+}
+
+.search-text {
+  top: 10px;
+  height:40px;
+  //background-color: blue;
 }
