--- a/club-manager/src/app/members/member-header/member-header.component.html
+++ b/club-manager/src/app/members/member-header/member-header.component.html
@@ -1,13 +1,20 @@
 <mat-toolbar color="accent">
   <span>{{ title }}</span>
   <mat-icon *ngIf="memberList" id="add-icon" class="material-icons-round" (click)="headerNav('mem-create')">person_add</mat-icon>
-  <div class="search">
-    <mat-icon class="search-icon">search</mat-icon>Suche:
-    <mat-form-field class="search-input">
-    <input  matInput placeholder="nach Vor- und Nachnamen, Kurzname" #input>
-  </mat-form-field>
-  <span class="filter"><mat-icon class="search-icon">filter_alt</mat-icon>Filter: <span class="filter-text">{{filterName}}</span></span>
+
+  <div class="search-icon">
+    <mat-icon>search</mat-icon>
+    <span>Suche:</span>
   </div>
+  <mat-form-field class="search-input">
+    <input class="search-text" matInput placeholder="Vor- o. Nachname, Kurzname" #input>
+  </mat-form-field>
+
+  <span class="filter">
+    <mat-icon class="search-icon">filter_alt</mat-icon>
+    <span>Filter:</span>
+    <span class="filter-text">{{filterName}}</span>
+  </span>
 
   <div class="toolbar-right">
     <button mat-button (click)="onHelp()" class="help-button">
