--- a/club-manager/src/app/app.component.scss
+++ b/club-manager/src/app/app.component.scss
@@ -126,6 +126,12 @@
   width: 110px;
 }
 
+.footer-statustext {
+  float: right;
+  margin-top: 16px;
+  margin-right: 16px;
+}
+
 .footer-comp {
   margin-top: 0px;
   margin-left: 150px;
