--- a/club-manager/src/app/members/member-select-list/member-select-list.component.scss
+++ b/club-manager/src/app/members/member-select-list/member-select-list.component.scss
@@ -7,7 +7,7 @@
   font-weight: bold;
 }
 
-.mat-list-option {
+.mdc-list-item.mdc-list-item--with-one-line {
   height: 30px !important;
   line-height: 30px !important;
   }
